# gemma4-llm

./: .gitignore  BUILD-PLAN.md  README.md  app.py  build-exe.bat  gemma4-llm.spec  make-icon.py  package-release.py  prepare-exe-bin.py  start.bat
android/: gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.html
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/gemma4/llm/: LlamaService.java  MainActivity.java
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  styles.xml
static/: index.html
